--- a/LendingSystem/Views/Home/Index.cshtml
+++ b/LendingSystem/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
-﻿@{
-    ViewBag.Title = "Lending System";
-}
-
-<div class="jumbotron">
-    <h1>Lending System</h1>
-    <p class="lead">Version 1.202001201000.ADS</p>
-</div>
+﻿<header class="masthead">
+    <div class="container">
+        <div class="text-center" style="margin: 50px;">
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <h1 class="font-weight-light" style="color:white; font-size: 80px; font-weight: bold;">MONEY LOAN INFORMATION SYSTEM</h1>
+            <hr />
+            <p class="lead" style="color:white; font-size: 50px; ">Start your loan via online</p>
+        </div>
+    </div>
+</header>
