--- a/LendingSystem/Views/Software/LoanList.cshtml
+++ b/LendingSystem/Views/Software/LoanList.cshtml
@@ -1,60 +1,62 @@
-﻿<h2>Loan List</h2>
+﻿<div class="container body-content">
+    <h2>Loan List</h2>
+    <div>
+        <h4>List of all loans</h4>
+        <hr />
 
-<div>
-    <h4>List of all loans</h4>
-    <hr />
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <a href="/Software" class="btn btn-default">Back</a>
-            <button class="btn btn-primary" onclick="buttonClickAddCreate()">Create</button>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <a href="/Software" class="btn btn-default">Back</a>
+                <button class="btn btn-primary" onclick="buttonClickAddCreate()">Create</button>
+            </div>
         </div>
-    </div>
 
-    <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#tabActivity">Transactions (Activities)</a></li>
-    </ul>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#tabActivity">Transactions (Activities)</a></li>
+        </ul>
 
-    <br />
+        <br />
 
-    <div class="tab-content">
-        <div id="tabActivity" class="tab-pane fade in active">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Filters
-                        </div>
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <label>Date Start</label>
-                                <div id="wijmoInputDateStartDate"></div>
+        <div class="tab-content">
+            <div id="tabActivity" class="tab-pane fade in active">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                Filters
                             </div>
-                            <div class="form-group">
-                                <label>Date End</label>
-                                <div id="wijmoInputDateEndDate"></div>
+                            <div class="panel-body">
+                                <div class="form-group">
+                                    <label>Date Start</label>
+                                    <div id="wijmoInputDateStartDate"></div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Date End</label>
+                                    <div id="wijmoInputDateEndDate"></div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Transaction</label>
+                                    <div id="wijmoComboboxTransactionType"></div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Filter</label>
+                                    <input class="form-control" id="filterText" placeholder="Filter text" />
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label>Transaction</label>
-                                <div id="wijmoComboboxTransactionType"></div>
+                            <div class="panel-footer">
+                                <button class="btn btn-success btn-block" onclick="buttonGetData()">Refresh (Get Data)</button>
                             </div>
-                            <div class="form-group">
-                                <label>Filter</label>
-                                <input class="form-control" id="filterText" placeholder="Filter text" />
-                            </div>
-                        </div>
-                        <div class="panel-footer">
-                            <button class="btn btn-success btn-block" onclick="buttonGetData()">Refresh (Get Data)</button>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-9">
-                    <div id="wijmoGridLoanList"></div>
+                    <div class="col-md-9">
+                        <div id="wijmoGridLoanList"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <div class="modal fae" id="modalLoanDetailForm" role="dialog">
     <div class="modal-dialog modal-sm">
