--- a/LendingSystem/Content/Site.css
+++ b/LendingSystem/Content/Site.css
@@ -1,6 +1,5 @@
 ﻿body {
     padding-top: 50px;
-    padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -60,3 +59,11 @@ input[disabled] {
     cursor: not-allowed;
 }
 
+.masthead {
+    height: 100vh;
+    min-height: 500px;
+    background-image: url('../Image/cover.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
