--- a/LendingSystem/Views/Software/Reports.cshtml
+++ b/LendingSystem/Views/Software/Reports.cshtml
@@ -1,59 +1,63 @@
-﻿<h2>Reports</h2>
-<div>
-    <h4>Generate your reports</h4>
-    <hr />
+﻿<div class="container body-content">
+    <h2>Reports</h2>
+    <div>
+        <h4>Generate your reports</h4>
+        <hr />
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <a href="/Software" class="btn btn-default">Back</a>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <a href="/Software" class="btn btn-default">Back</a>
+            </div>
         </div>
-    </div>
 
-    <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#tabLoanDetailReport" onclick="tabLoanDetailReportClick()">Loan Detail Report</a></li>
-        <li><a data-toggle="tab" href="#tabCollectionDetailReport" onclick="tabCollectionDetailReportClick()">Collection Detail Report</a></li>
-    </ul>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#tabLoanDetailReport" onclick="tabLoanDetailReportClick()">Loan Detail Report</a></li>
+            <li><a data-toggle="tab" href="#tabCollectionDetailReport" onclick="tabCollectionDetailReportClick()">Collection Detail Report</a></li>
+        </ul>
 
-    <br />
+        <br />
 
-    <div class="row">
-        <div class="col-md-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Filters
+        <div class="row">
+            <div class="col-md-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Filters
+                    </div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label>Date Start</label>
+                            <div id="wijmoInputDateStartDate"></div>
+                        </div>
+                        <div class="form-group">
+                            <label>Date End</label>
+                            <div id="wijmoInputDateEndDate"></div>
+                        </div>
+                        <div class="form-group">
+                            <label>Filter</label>
+                            <input class="form-control" id="filterText" placeholder="Filter text" />
+                        </div>
+                    </div>
+                    <div class="panel-footer">
+                        <button class="btn btn-success btn-block" onclick="buttonGetData()">Generate</button>
+                        <button class="btn btn-success btn-block" onclick="buttonDownload()">Export</button>
+                    </div>
                 </div>
-                <div class="panel-body">
-                    <div class="form-group">
-                        <label>Date Start</label>
-                        <div id="wijmoInputDateStartDate"></div>
+            </div>
+            <div class="col-md-9">
+                <div class="tab-content">
+                    <div id="tabLoanDetailReport" class="tab-pane fade in active">
+                        <div id="wijmoLoanListFlexGrid"></div>
                     </div>
-                    <div class="form-group">
-                        <label>Date End</label>
-                        <div id="wijmoInputDateEndDate"></div>
+                    <div id="tabCollectionDetailReport" class="tab-pane fade">
+                        <div id="wijmoCollectionListFlexGrid"></div>
                     </div>
-                    <div class="form-group">
-                        <label>Filter</label>
-                        <input class="form-control" id="filterText" placeholder="Filter text" />
-                    </div>
-                </div>
-                <div class="panel-footer">
-                    <button class="btn btn-success btn-block" onclick="buttonGetData()">Generate</button>
-                    <button class="btn btn-success btn-block" onclick="buttonDownload()">Export</button>
                 </div>
             </div>
         </div>
-        <div class="col-md-9">
-            <div class="tab-content">
-                <div id="tabLoanDetailReport" class="tab-pane fade in active">
-                    <div id="wijmoLoanListFlexGrid"></div>
-                </div>
-                <div id="tabCollectionDetailReport" class="tab-pane fade">
-                    <div id="wijmoCollectionListFlexGrid"></div>
-                </div>
-            </div>
-        </div>
     </div>
+
 </div>
+
 
 
 <script type="text/javascript">
@@ -330,7 +334,7 @@
             wijmoCollectionListFlexGrid.itemsSource = wijmoCollectionListCollectionView;
         }, 500);
     }
-    
+
     window.onload = function () {
         var date = new Date();
 
