--- a/LendingSystem/Views/Software/Index.cshtml
+++ b/LendingSystem/Views/Software/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Dashboard";
+    ViewBag.Title = "Dashboard Menu";
 }
 
 <div class="container body-content">
@@ -15,6 +15,7 @@
                     <br />
                     Customers
                 </a>
+                <br />
                 <a href="/Software/CollectorList" class="btn btn-default btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">
                     <img src="~/Image/collector.png" height="100" />
                     <br />
@@ -29,6 +30,7 @@
                     <br />
                     Loan
                 </a>
+                <br />
                 <a href="/Software/CollectionList" class="btn btn-default btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">
                     <img src="~/Image/collect.png" height="100" />
                     <br />
@@ -43,6 +45,7 @@
                     <br />
                     Reports
                 </a>
+                <br />
                 @*<a href="/Software/UserList" class="btn btn-success btn-lg btn-block" style="padding-top: 50px; padding-bottom: 50px;">User</a>*@
             </div>
         </div>
