--- a/LendingSystem/Views/Software/CustomerProfile.cshtml
+++ b/LendingSystem/Views/Software/CustomerProfile.cshtml
@@ -4,11 +4,21 @@
         <h4>Manage your loan and transactions</h4>
         <hr />
 
-        <h3 id="currentUserFullName"></h3>
-        <i class="glyphicon glyphicon-calendar"></i> &nbsp; <span id="currentDateOfBirth"></span><br />
-        <i class="glyphicon glyphicon-user"></i> &nbsp; <span id="currentGender"></span><br />
-        <i class="glyphicon glyphicon-map-marker"></i> &nbsp; <span id="currentAddress"></span>
-
+        <div class="row">
+            <div class="col-md-2" align="center">
+                <img id="imageDisplay" src="#" class="img-responsive img-thumbnail" />
+                <br />
+                <br />
+                <input type="file" onchange="previewFile()" class="form-control" />
+            </div>
+            <div class="col-md-10">
+                <h3 id="currentUserFullName"></h3>
+                <i class="glyphicon glyphicon-calendar"></i> &nbsp; <span id="currentDateOfBirth"></span><br />
+                <i class="glyphicon glyphicon-user"></i> &nbsp; <span id="currentGender"></span><br />
+                <i class="glyphicon glyphicon-map-marker"></i> &nbsp; <span id="currentAddress"></span>
+            </div>
+        </div>
+       
         <br />
         <br />
 
@@ -98,6 +108,50 @@
     var wijmoCollectionViewCurrentLoanList;
     var wijmoComboboxTerm;
 
+    function previewFile() {
+        var preview = document.querySelector("img");
+        var file = document.querySelector("input[type=file]").files[0];
+        var reader = new FileReader();
+
+        reader.onloadend = function () {
+            preview.src = reader.result;
+
+            var imageDataURL = reader.result;
+            var imageObject = new Object();
+            imageObject.ImageURL = imageDataURL.replace(/^data:image\/(png|jpeg);base64,/, "");
+            var imageData = JSON.stringify(imageObject);
+
+            $.ajax({
+                url: "/api/current/uploadImage",
+                type: "PUT",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: imageData,
+                statusCode: {
+                    200: function () {
+                        toastr.success("Upload Successful");
+                    },
+                    404: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 404 - Not Found");
+                    },
+                    400: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 400 - Bad Request");
+                    },
+                    500: function (message) {
+                        toastr.error(message.responseText.replace(/^"(.*)"$/, '$1'), "Error 500 - Internal Server Error");
+                    }
+                }
+            });
+        }
+
+        if (file) {
+            reader.readAsDataURL(file);
+
+        } else {
+            preview.src = "";
+        }
+    }
+
     function getCurrentUserDetail() {
         $.ajax({
             url: "/api/current/detail",
@@ -110,6 +164,17 @@
                     document.getElementById("currentDateOfBirth").innerHTML = results.BirthDate;
                     document.getElementById("currentGender").innerHTML = results.Gender;
                     document.getElementById("currentAddress").innerHTML = results.Address;
+
+                    document.getElementById("imageDisplay").src = "data:image/jpeg;base64," + results.ImageURL;
+
+                    //var imageElement = document.createElement("images");
+                    //var imageData = new Image();
+                    //imageData.src = "data:image/jpeg;base64," + results.ImageURL;
+                    //imageData.className = "img-responsive img-thumbnail";
+                    //imageElement.appendChild(imageData);
+                    //var photoDivElement = document.createElement("DIV");
+                    //var photoDiv = document.getElementById("photoDiv").appendChild(imageElement);
+                    //photoDiv.appendChild(photoDivElement);
                 }
 
                 createWijmoGridCurrentLoanList();
